use message box instead of notification and ensure that buttons are readable, fixes #5945
Closes #5945

Merge request studip/studip!4546

--- a/resources/assets/stylesheets/scss/system-notifications.scss
+++ b/resources/assets/stylesheets/scss/system-notifications.scss
@@ -141,7 +141,7 @@
         display: none;
     }
 
-    a:not(.system-notification-message) {
+    a:not(.system-notification-message,.button) {
         color: var(--color--white);
         text-decoration-line: underline;
 
